--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,77 @@
-test.*
-tmp.*
-.tags
-*.pyc
+# For current directory only
+# ----------------------------------------------------------------------------
+
+translation_history.data
+
+# General
+# ----------------------------------------------------------------------------
 *.o
 *.out
+
+# log
 *.log
-/doc/tags
-/doc/tags-cn
+
+# cache
+*.cache
+cache/
+
+# Windows   
+# ----------------------------------------------------------------------------
+Thumbs.db
+Desktop.ini
+
+# Tags      
+# -----------------------------------------------------------------------------
+TAGS
+!TAGS/
+tags
+tags-cn
+!tags/
+.tags
+.tags1
+tags.lock
+tags.temp
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+cscope.files
+cscope.out
+cscope.in.out
+cscope.po.out
+
+# Vim       
+# ------------------------------------------------------------------------------
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+# Test % Tmp
+# -------------------------------------------------------------------------------
+test.*
+tmp.*
+temp.*
+
+# Java
+# -------------------------------------------------------------------------------
+*.class
+
+# JavaScript
+# -------------------------------------------------------------------------------
+node_modules
+
+# Python
+# -------------------------------------------------------------------------------
+*.pyc
 .idea/
 /.idea
 build/
 __pycache__
-translate_history.data
 
-
+# Rust
+# -------------------------------------------------------------------------------
+target/
+**/*.rs.bk
