--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           VIM_EXEC: ${{ steps.vim.outputs.executable }}
         run: |
           $VIM_EXEC --version
-          $VIM_EXEC -u test/vimrc -c 'Vader! test/translator.vader'
+          $VIM_EXEC -u test/vimrc -c 'Vader! test/*'
 
   vint:
     name: Run vint
