--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
-      - run: |
-        python --version
-        python ./test/test_translator.py
+      - run: python --version
+      - run: python ./test/test_translator.py
