--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
       - run: pip install vim-vint
-      - run: vint --warning --verbose --enable-neovim --color --style ./autoload ./plugin ./syntax
+      - run: vint --error --verbose --enable-neovim --color --style ./autoload ./plugin ./syntax
 
   translator-script:
     name: Test translator.py
